fix navbar not showing in the correct location and custom contact result

--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -2,8 +2,24 @@ input:-webkit-autofill,
 input:-webkit-autofill:focus {
     transition: background-color 600000s 0s, color 600000s 0s;
 }
+
 input[data-autocompleted] {
     background-color: transparent !important;
+}
+
+.successful-ui {
+    color: white;
+}
+
+.failed-ui {
+    color: red;
+}
+
+.result-contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .contact-form {
